adding background image, changing color scheme

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
 body {
+	color: #9F8FBD;
 	font-family: 'Roboto Slab';
+	background-image: url("flow-wallpaper.jpg");
 }
+
+.outer-layer {
+	padding: 30px;
+}
+
+.navbar {
+	background-color: #149036;
+	color: #472E75;
+	padding: 10px;
+}
+
+
+
